apps/weatherserver/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weatherserver
spec:
  replicas: 2

  selector:
    matchLabels:
      app: weatherserver

  template:
    metadata:
      labels:
        app: weatherserver

    spec:
      serviceAccountName: weatherserver

      securityContext:
        runAsNonRoot: true
        fsGroup: 2000

      containers:
        - name: weatherserver

          image: weatherserver:latest

          imagePullPolicy: Always

          ports:
            - containerPort: 8080

          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL

          readinessProbe:
            httpGet:
              path: /ready
              port: 8080

          livenessProbe:
            httpGet:
              path: /health
              port: 8080

          resources:
            requests:
              cpu: 100m
              memory: 128Mi

            limits:
              cpu: 500m
              memory: 256Mi
