apps/weatherserver/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weatherserver
spec:
  selector:
    app: weatherserver

  ports:
    - name: http
      port: 80
      targetPort: 8081
